[chromium] Regression: navigating between composited pages doesn't cause redraw until scrolled https://bugs.webkit.org/show_bug.cgi?id=100396

Patch by James Robinson <jamesr@chromium.org> on 2012-10-25
Reviewed by Adrienne Walker.

This partially reverts r132173.  It's not valid to suppress invalidations in commitDocumentData since for small
or cached pages this could load up the whole document.  Also adds and improves some of the tracing.

* src/WebFrameImpl.cpp:
(WebKit::WebFrameImpl::commitDocumentData):
(WebKit::WebFrameImpl::createFrameView):
* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::scheduleComposite):

Canonical link: https://commits.webkit.org/118447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132533 268f45cc-cd09-0410-ab3c-d52691b4dbfc